@@ -179,6 +179,8 @@ MULTICAST=No
 
 DONT_LOAD=
 
+AUTO_COMMENT=Yes
+
 ###############################################################################
 #			P A C K E T   D I S P O S I T I O N
 ###############################################################################
