@@ -353,6 +353,7 @@ sub initialize() {
 		MULTICAST => undef,
 		DONT_LOAD => '',
 		BROKEN_ROUTING => '',
+		AUTO_COMMENT => '' ,
 		#
 		# Packet Disposition
 		#
@@ -1880,6 +1881,7 @@ sub get_configuration( $ ) {
     default_yes_no 'KEEP_RT_TABLES'             , '';
     default_yes_no 'DELETE_THEN_ADD'            , 'Yes';
     default_yes_no 'BROKEN_ROUTING'             , '';
+    default_yes_no 'AUTO_COMMENT'               , 'Yes';
     default_yes_no 'MULTICAST'                  , '';
     default_yes_no 'MARK_IN_FORWARD_CHAIN'      , '';
     
