@@ -241,6 +241,18 @@
       </varlistentry>
 
       <varlistentry>
+        <term><emphasis role="bold">AUTO_COMMENT=</emphasis>[<emphasis
+        role="bold">Yes</emphasis>|<emphasis role="bold">No</emphasis>]</term>
+
+        <listitem>
+          <para>Added in Shorewall-perl 4.1.5. If set, if there is not a
+          current comment when a macro is invoked, the behavior is as if the
+          first line of the macro file was "COMMENT &lt;macro name&gt;". The
+          AUTO_COMMENT option has a default value of 'Yes'.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
         <term><emphasis role="bold">BIGDPORTLISTS=</emphasis>[<emphasis
         role="bold">Yes</emphasis>|<emphasis role="bold">No</emphasis>]</term>
 
