@@ -123,9 +123,11 @@ New Features in 4.1.5.
 4)  Shorewall-perl now generates an error when a MAC address appears in
     a traffic shaping rule in the OUTPUT or POSTROUTING chains.
 
-5)  Macros are now self-commenting. If there is not a current comment
-    when a macro is invoked, the behavior under Shorewall-perl is as if
-    the first line of the macro file was "COMMENT <macro name>".
+5)  Macros are now self-commenting under control of a new AUTO_COMMENT
+    option in shorewall.conf. When this option is set, if there is not
+    a current comment when a macro is invoked, the behavior under
+    Shorewall-perl is as if the first line of the macro file was
+    "COMMENT <macro name>".
 
     So, if you have this rule:
 
@@ -134,6 +136,10 @@ New Features in 4.1.5.
     then the generated netfilter rule will include "/* SSH */" when
     viewed with 'iptables -L' or 'shorewall show loc2fw' or 'shorewall
     dump'.
+
+    The AUTO_COMMENT option has a default value of 'Yes' and is only
+    available under Shorewall-perl The option is ignored by
+    Shorewall-shell.
 
 New Features in Shorewall 4.1.
 
