@@ -19,6 +19,8 @@ Changes in 4.1.5
 
 9)  Automatic macro comments.
 
+10) But make automatic macro comments optional.
+
 Changes in 4.1.4
 
 1)  Fix do_test() to accept 0 and to use the same mask as
